--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
 	"name": "flagster-js",
 	"version": "1.0.0",
-	"main": "index.js",
 	"author": "Maxime Le Duc <maximeld19@gmail.com>",
 	"license": "MIT",
 	"private": true,
+	"main": "dist/src/index.js",
+	"types": "dist/src/index.d.ts",
+	"files": ["dist"],
 	"scripts": {
+		"build": "tsc",
+		"prepare": "yarn build",
 		"test": "vitest"
 	},
 	"devDependencies": {
