Add onChange listener avec init

--- a/biome.json
+++ b/biome.json
@@ -23,6 +23,9 @@
             "style": {
                 "useImportType": "off",
                 "noNonNullAssertion": "off"
+            },
+            "complexity": {
+                "noForEach": "off"
             }
         }
     },
