Exclude tests in build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,9 @@
         "types": [
             "vitest/globals"
         ]
-    }
+    },
+    "include": [
+        "src",
+        "tests"
+    ]
 }
