--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-	"name": "flagster-js",
-	"version": "1.0.0",
-	"author": "Maxime Le Duc <maximeld19@gmail.com>",
-	"license": "MIT",
-	"private": true,
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"files": ["dist"],
-	"scripts": {
-		"build": "tsc --project tsconfig.build.json",
-		"test": "vitest"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
-		"typescript": "^5.8.2",
-		"vitest": "^3.0.7"
-	}
+    "name": "flagster-js",
+    "version": "1.0.0",
+    "author": "Maxime Le Duc <maximeld19@gmail.com>",
+    "license": "MIT",
+    "private": true,
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "build": "tsc --project tsconfig.build.json",
+        "prepare": "yarn build",
+        "test": "vitest"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "^1.9.4",
+        "typescript": "^5.8.2",
+        "vitest": "^3.0.7"
+    }
 }
